Stops taxons with long names from wrapping on mouseover #446

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -96,13 +96,18 @@ h1
       :display block
       :line-height 2.5em
       :padding-left 20px
-    a:hover
       :width 170px
+      :white-space nowrap
+      :overflow hidden
+    a:hover
       :background url(/images/menu-hover.png) right center no-repeat
   li.current
     :width 200px
     a
+      :width 180px
       :background url(/images/menu-current.png) right center no-repeat
+      :white-space nowrap
+      :overflow hidden
     a:hover
       :width 180px
         
